plugins {
    id 'java'
    id 'application'
}

group = 'com.za.minecraft'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

ext {
    lwjglVersion = '3.3.3'
    jomlVersion = '1.10.5'
    lwjglNatives = 'natives-windows'
}

dependencies {
    implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")

    implementation "org.lwjgl:lwjgl"
    implementation "org.lwjgl:lwjgl-glfw"
    implementation "org.lwjgl:lwjgl-opengl"
    implementation "org.lwjgl:lwjgl-stb"
    implementation "org.lwjgl:lwjgl-openal"

    runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-openal::$lwjglNatives"

    implementation "org.joml:joml:$jomlVersion"
    implementation "com.google.code.gson:gson:2.10.1"

    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
}

application {
    mainClass = 'com.yourname.minecraft.Application'
}

test {
    useJUnitPlatform()
}

// JVM args для лучшей производительности
tasks.withType(JavaExec) {
    jvmArgs = [
            '-Xms512m',
            '-Xmx2g',
            '-XX:+UseG1GC',
            '--enable-preview'
    ]
}